<?xml version="1.0"?>
<package format="2">
  <name>gpio_msgs</name>
  <version>0.0.0</version>
  <description>GPIO Message for Raspberry Pi</description>

  <maintainer email="chuck_coughlin@comcast.net">Chuck Coughlin</maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>


  <export>
  </export>
</package>
