<?xml version="1.0"?>
<package format="2">
  <name>teleop</name>
  <version>0.0.0</version>
  <description>Turtlebot3 remote control.</description>

  <maintainer email="chuck_coughlin@comcast.net">chuckc</maintainer>
  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>


  <export/>
</package>
